--- a/27092017.md
+++ b/27092017.md
@@ -1,7 +1,7 @@
 1. Беларев И.А. Обаева А.С. О распределенном реестре и возможности его применения // Финансы: Теория и Практика - 2017
 2. Васильчак С.В. Куницкая-Ильяш М.В. Дубина М.П. Использование криптовалют в современных экономических системах Украины: перспективы и риски // Науковий вісник Львівського національного університету ветеринарної медицини та біотехнологій імені С.З. Ґжицького - 2017 
-3.
-4.
+3. Терещенко Л.К. Стародубова О.Е. ЗАГАДКИ ИНФОРМАЦИОННОГО ПРАВА // Журнал российского права - 2017
+4. Намиот Д.Е. Куприяновский В.П. Синягов С.А. Инфокоммуникационные сервисы в умном городе // International Journal of Open Information Technologies - 2016 
 5.
 6.
 7.
